<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VeryNote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save MusicXML</string>
    <string name="action_share">Share MusicXML</string>
    <string name="record" size="2em">Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="action_playmidi">Play MIDI</string>
    <string name="action_new">New Masterpiece</string>

    <string name="freq"> </string>
    <string name="prevNoteString"> ... </string>
    <string name="met_count">0</string>

    <string name="filename">Untitled</string>

    <string name="settings">Settings</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="metronome_speed_text">Metronome Speed (BPM):</string>
    <string name="metronome_speed">80</string>
    <string name="cleflabel_text">Clef:</string>
    <string name="clef_text">Treble</string>
    <string name="warning_text">Warning: \n Changing clef will delete your current work.</string>

</resources>