<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="200dp"
    android:orientation="horizontal"
    android:background="@android:color/background_light">
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="@color/lightGray">
        <RelativeLayout
            android:id="@+id/textbox"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/settingstext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="23dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/speedlabel"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_below="@id/settingstext"
                android:text="@string/metronome_speed_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:text="@string/metronome_speed"
                android:id="@+id/speedValue"
                android:layout_above="@+id/speedBar"
                android:layout_toRightOf="@+id/speedlabel"
                android:layout_toEndOf="@+id/speedlabel"
                android:layout_marginLeft="10dp"/>

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/speedBar"
                android:layout_below="@+id/speedlabel"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:progress="20"
                android:max="60"/>

            <TextView
                android:id="@+id/cleflabel"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_below="@id/speedBar"
                android:text="@string/cleflabel_text"/>

            <TextView
                android:id="@+id/clef_text"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_below="@id/speedBar"
                android:layout_toRightOf="@+id/cleflabel"
                android:layout_toEndOf="@+id/cleflabel"
                android:layout_marginLeft="10dp"
                android:text="@string/clef_text"/>

            <Button
                android:id="@+id/treble"
                android:background="@drawable/treble"
                android:layout_width="14.2dp"
                android:layout_height="40dp"
                style="?android:attr/borderlessButtonStyle"
                android:layout_below="@+id/cleflabel"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/bass"
                android:background="@drawable/bass"
                android:layout_width="35.5dp"
                android:layout_height="40dp"
                style="?android:attr/borderlessButtonStyle"
                android:layout_below="@+id/cleflabel"
                android:layout_toRightOf="@+id/treble"
                android:layout_toEndOf="@+id/treble"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_alignTop="@+id/bass"
                android:layout_toRightOf="@+id/bass"
                android:layout_toEndOf="@+id/bass" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="1dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/lightGray">
            <Button
                android:id="@+id/cancel"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/action_cancel"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/ok"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/action_ok"
                style="?android:attr/borderlessButtonStyle"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>